--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,6 @@ a {
     align-items: center;
     justify-content: center;
     margin: auto;
-    user-select: none;
 }
 
 #cards {
@@ -51,5 +50,5 @@ a {
 }
 
 li {
-    user-select: all
+    user-select: all;
 } 
